fix(body): set overflow-x hidden (#24)

--- a/styles/core/_base.scss
+++ b/styles/core/_base.scss
@@ -8,6 +8,7 @@ html {
 body {
 	margin: 0;
 	font-size: $font-size--copy-1;
+	overflow-x: hidden;
 }
 
 h1 {
